--- a/18-filter.html
+++ b/18-filter.html
@@ -6,6 +6,7 @@
 			name: { value: "" },
             property: { value: "payload", required: true },
             propertyType: { value: "msg" },
+            asArray: { value: false },
             outputs: { value: 1 }
 		},
 		inputs: 1,
@@ -20,9 +21,23 @@
             });
 
             $("#node-input-property").typedInput({ default: this.propertyType || 'msg', types: ['msg', 'flow', 'global'] });
+
+            var updateFilterType = function() {
+                if ($("#node-input-filter-type").prop('checked')) {
+                    // TODO
+                }
+                else {
+                    // TODO
+                }
+            };
+            $("#node-input-filter-type").change(updateFilterType);
+            $("#node-input-filter-type").prop('checked', this.asArray);
+            updateFilterType();
         },
         oneditsave: function() {
-            this.propertyType = $("#node-input-property").typedInput('type');
+            var node = this;
+            node.propertyType = $("#node-input-property").typedInput('type');
+            node.asArray = $("#node-input-filter-type").prop('checked');
         }
 	});
 </script>
@@ -41,6 +56,12 @@
     <div class="form-row">
         <label for="node-input-property">Property</label>
         <input type="text" id="node-input-property" style="width: 70%"/>
+    </div>
+
+    <div class="form-row">
+        <label>&nbsp;</label>
+        <input type="checkbox" id="node-input-filter-type" style="display: inline-block; width: auto; vertical-align: top;">
+        <label for="node-input-filter-type" style="width: 70%;">Filter as an array of messages</label>
     </div>
 </script>
 
