--- a/18-filter.html
+++ b/18-filter.html
@@ -9,6 +9,7 @@
             asArray: { value: false },
             itemProperty: { value: 'payload' },
             itemPropertyType: { value: 'item' },
+            checkall: { value: "true", required: true },
             outputs: { value: 1 }
 		},
 		inputs: 1,
@@ -79,6 +80,13 @@
     <div class="form-row" id="node-input-item-property-row" style="display: none;">
         <label>&nbsp;</label>
         <input type="text" id="node-input-item-property" style="width: 70%"/>
+    </div>
+
+    <div class="form-row">
+        <select id="node-input-checkall" style="width:100%; margin-right:5px;">
+            <option value="true">checking all rules</option>
+            <option value="false">stopping after first match (like an if-statement)</option>
+        </select>
     </div>
 </script>
 
